fix onclick radio handlers

--- a/waitlistform.html
+++ b/waitlistform.html
@@ -180,9 +180,10 @@
         <div class="question" data-step="14">
           <h2>Do you know what virtual co-working is?</h2>
           <div class="radio-group">
-            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="Yes" onclick="branchYes()" required><span>Yes</span></label>
-            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="No" onclick="branchNo()" required><span>No</span></label>
+            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="Yes" required><span>Yes</span></label>
+            <label><input type="radio" name="Do you know what virtual co-working is? (If yes, skip to Section 3. If no, skip to Section 4)" value="No" required><span>No</span></label>
           </div>
+          <button type="button" onclick="handleCoworkingBranch()">Next</button>
         </div>
 
         <div class="question" data-step="15">
